@@ -1,14 +1,9 @@
 package kr.bb.delivery;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.groups.Tuple.tuple;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.BDDMockito.given;
-import static org.mockito.Mockito.verify;
 
-import java.util.Arrays;
 import java.util.List;
-import java.util.Optional;
+import java.util.stream.Collectors;
 import kr.bb.delivery.dto.request.DeliveryInsertRequestDto;
 import kr.bb.delivery.dto.request.DeliveryUpdateRequestDto;
 import kr.bb.delivery.dto.response.DeliveryReadResponseDto;
@@ -19,58 +14,30 @@ import kr.bb.delivery.service.DeliveryService;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.transaction.annotation.Transactional;
 
-@ExtendWith(MockitoExtension.class)
+@SpringBootTest
+@Transactional
 public class DeliveryServiceTest {
-    @InjectMocks
+    @Autowired
     private DeliveryService deliveryService;
 
-    @Mock
+    @Autowired
     private DeliveryRepository deliveryRepository;
 
     @Test
     @DisplayName("배송 정보 생성 service 테스트")
     public void createDeliveryService(){
         // given
-        DeliveryInsertRequestDto dto = DeliveryInsertRequestDto.builder()
-                .ordererName("홍길동")
-                .ordererPhoneNumber("010-1111-1111")
-                .ordererEmail("abc@example.com")
-                .recipientName("이순신")
-                .recipientPhoneNumber("010-2222-2222")
-                .zipcode("05231")
-                .roadName("서울시 송파구 올림픽로 23가길 22-1")
-                .addressDetail("401호")
-                .request("빠른 배송 부탁드려요~")
-                .deliveryCost(5000L)
-                .build();
-
-        Delivery mockDelivery = Delivery.builder()
-                .deliveryId(1L)
-                .deliveryOrdererName("홍길동")
-                .deliveryOrdererPhoneNumber("010-1111-1111")
-                .deliveryOrdererEmail("abc@example.com")
-                .deliveryRecipientName("이순신")
-                .deliveryRecipientPhoneNumber("010-2222-2222")
-                .deliveryZipcode("05231")
-                .deliveryRoadName("서울시 송파구 올림픽로 23가길 22-1")
-                .deliveryAddressDetail("401호")
-                .deliveryRequest("빠른 배송 부탁드려요~")
-                .deliveryCost(5000L)
-                .build();
-
-//        Mockito.when(deliveryRepository.save(any(Delivery.class))).thenReturn(mockDelivery);
-        given(deliveryRepository.save(any())).willReturn(mockDelivery);
+        DeliveryInsertRequestDto dto = createInsertRequestDto();
 
         //when
         Delivery savedDelivery = deliveryService.createDelivery(dto);
 
         // then
-        Assertions.assertEquals(savedDelivery.getDeliveryId(), 1);
+        Assertions.assertNotNull(savedDelivery.getDeliveryId());
         Assertions.assertNull(savedDelivery.getDeliveryTrackingNumber());
         Assertions.assertEquals(savedDelivery.getDeliveryOrdererName(), "홍길동");
         Assertions.assertEquals(savedDelivery.getDeliveryOrdererPhoneNumber(), "010-1111-1111");
@@ -83,73 +50,34 @@ public class DeliveryServiceTest {
         Assertions.assertEquals(savedDelivery.getDeliveryRequest(), "빠른 배송 부탁드려요~");
         Assertions.assertEquals(savedDelivery.getDeliveryCost(), 5000L);
         Assertions.assertEquals(savedDelivery.getDeliveryStatus(), DeliveryStatus.PENDING);
-
-        verify(deliveryRepository).save(any());
     }
 
     @Test
     @DisplayName("배송 정보 조회")
     void getAllDeliveryInfo() {
         // given
-        Delivery delivery1 = Delivery.builder()
-                .deliveryId(1L)
-                .deliveryOrdererName("홍길동")
-                .deliveryOrdererPhoneNumber("010-1111-1111")
-                .deliveryOrdererEmail("abc@example.com")
-                .deliveryRecipientName("이순신")
-                .deliveryRecipientPhoneNumber("010-2222-2222")
-                .deliveryZipcode("05231")
-                .deliveryRoadName("서울시 송파구 올림픽로 23가길 22-1")
-                .deliveryAddressDetail("401호")
-                .deliveryRequest("빠른 배송 부탁드려요~")
-                .deliveryCost(5000L)
-                .build();
+        Delivery delivery1 = createDeliveryEntity("홍길동", "010-1111-1111");
+        Delivery delivery2 = createDeliveryEntity("이순신", "010-2222-2222");
+        deliveryRepository.saveAll(List.of(delivery1, delivery2));
 
-        Delivery delivery2 = Delivery.builder()
-                .deliveryId(2L)
-                .deliveryOrdererName("홍길동")
-                .deliveryOrdererPhoneNumber("010-1111-1111")
-                .deliveryOrdererEmail("abc@example.com")
-                .deliveryRecipientName("이순신")
-                .deliveryRecipientPhoneNumber("010-2222-2222")
-                .deliveryZipcode("05231")
-                .deliveryRoadName("서울시 송파구 올림픽로 23가길 22-1")
-                .deliveryAddressDetail("401호")
-                .deliveryRequest("빠른 배송 부탁드려요~")
-                .deliveryCost(5000L)
-                .build();
-
-        List<Long> deliveryIds = Arrays.asList(1L, 2L);
-
-//        Mockito.when(deliveryRepository.findAllById(deliveryIds)).thenReturn(List.of(delivery1, delivery2));
-        given(deliveryRepository.findAllById(deliveryIds)).willReturn(List.of(delivery1, delivery2));
+        List<Delivery> foundDeliveries = deliveryRepository.findAllById(List.of(delivery1.getDeliveryId(), delivery2.getDeliveryId()));
+        List<Long> deliveryIds = foundDeliveries.stream().map(Delivery::getDeliveryId).collect(
+                Collectors.toList());
 
         // when
         List<DeliveryReadResponseDto> dtos = deliveryService.getDelivery(deliveryIds);
 
         // then
         assertThat(dtos).hasSize(2)
-                .extracting("deliveryId", "ordererName")
-                .containsExactlyInAnyOrder(tuple(1L, "홍길동"), tuple(2L, "홍길동"));
+                .extracting("ordererName")
+                .containsExactlyInAnyOrder("홍길동", "이순신");
     }
 
     @Test
     @DisplayName("배송 정보 수정")
     void updateDelivery(){
         // given
-        Delivery savedDelivery = Delivery.builder()
-                .deliveryId(1L)
-                .deliveryOrdererName("홍길동")
-                .deliveryOrdererPhoneNumber("010-1111-1111")
-                .deliveryOrdererEmail("abc@example.com")
-                .deliveryRecipientName("이순신")
-                .deliveryRecipientPhoneNumber("010-2222-2222")
-                .deliveryZipcode("05231")
-                .deliveryRoadName("서울시 송파구 올림픽로 23가길 22-1")
-                .deliveryAddressDetail("401호")
-                .deliveryRequest("빠른 배송 부탁드려요~")
-                .deliveryCost(5000L)
-                .build();
+        Delivery delivery = createDeliveryEntity("홍길동", "010-1111-1111");
 
         DeliveryUpdateRequestDto dto = DeliveryUpdateRequestDto.builder()
                 .recipientName("손흥민")
@@ -159,33 +87,47 @@ public class DeliveryServiceTest {
                 .addressDetail("1701호")
                 .build();
 
-        Delivery modifiedDelivery = Delivery.builder()
-                .deliveryId(1L)
-                .deliveryOrdererName("홍길동")
-                .deliveryOrdererPhoneNumber("010-1111-1111")
-                .deliveryOrdererEmail("abc@example.com")
-                .deliveryRecipientName("손흥민")
-                .deliveryRecipientPhoneNumber("010-5555-5555")
-                .deliveryZipcode("04342")
-                .deliveryRoadName("서울시 용산구 한남동 독서당로 111-2")
-                .deliveryAddressDetail("1701호")
-                .deliveryRequest("빠른 배송 부탁드려요~")
-                .deliveryCost(5000L)
-                .build();
-
-        Long deliveryId = 1L;
-
-        given(deliveryRepository.findById(any())).willReturn(Optional.ofNullable(savedDelivery));
-        given(deliveryRepository.save(any())).willReturn(modifiedDelivery);
+        Delivery savedDelivery = deliveryRepository.save(delivery);
 
         // when
-        Delivery updatedDelivery = deliveryService.updateDelivery(deliveryId, dto);
+        Delivery updatedDelivery = deliveryService.updateDelivery(savedDelivery.getDeliveryId(), dto);
 
         // then
-        Assertions.assertEquals(updatedDelivery.getDeliveryId(), 1L);
+        Assertions.assertNotNull(updatedDelivery.getDeliveryId());
         Assertions.assertEquals(updatedDelivery.getDeliveryRecipientName(), "손흥민");
         Assertions.assertEquals(updatedDelivery.getDeliveryZipcode(), "04342");
         Assertions.assertEquals(updatedDelivery.getDeliveryRoadName(), "서울시 용산구 한남동 독서당로 111-2");
         Assertions.assertEquals(updatedDelivery.getDeliveryAddressDetail(), "1701호");
     }
+
+    private DeliveryInsertRequestDto createInsertRequestDto(){
+        return DeliveryInsertRequestDto.builder()
+                .ordererName("홍길동")
+                .ordererPhoneNumber("010-1111-1111")
+                .ordererEmail("abc@example.com")
+                .recipientName("이순신")
+                .recipientPhoneNumber("010-2222-2222")
+                .zipcode("05231")
+                .roadName("서울시 송파구 올림픽로 23가길 22-1")
+                .addressDetail("401호")
+                .request("빠른 배송 부탁드려요~")
+                .deliveryCost(5000L)
+                .build();
+    }
+
+    private Delivery createDeliveryEntity(String ordererName, String ordererPhoneNumber){
+        return Delivery.builder()
+                .deliveryOrdererName(ordererName)
+                .deliveryOrdererPhoneNumber(ordererPhoneNumber)
+                .deliveryOrdererEmail("abc@example.com")
+                .deliveryRecipientName("이순신")
+                .deliveryRecipientPhoneNumber("010-2222-2222")
+                .deliveryZipcode("05231")
+                .deliveryRoadName("서울시 송파구 올림픽로 23가길 22-1")
+                .deliveryAddressDetail("401호")
+                .deliveryRequest("빠른 배송 부탁드려요~")
+                .deliveryCost(5000L)
+                .build();
+    }
+
 }
